<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">News</string>
    <string name="login">Login:</string>
    <string name="password">Password:</string>
    <string name="enter">Enter</string>
    <string name="register">Registration</string>
    <string name="name">Name:</string>
    <string name="description">Description:</string>
    <string name="create">Create</string>
    <string name="load_image">Add image</string>
    <string name="title_search">search news</string>
    <string name="logout">Logout</string>
    <string name="load_from">Load from:</string>

    <string-array name="load_array">
        <item>Gallery</item>
        <item>Camera</item>
    </string-array>
</resources>
