<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="@dimen/h1" />

    <EditText
        android:id="@+id/etNews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvName"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etNews"
        android:text="@string/description"
        android:textSize="@dimen/h1" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvDescription"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/btnImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etDescription"
        android:text="@string/load_image" />

    <ProgressBar
        android:id="@+id/prBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/ivSelected"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@+id/btnImage"
        android:layout_centerHorizontal="true" />
    
    <Button
        android:id="@+id/btnCreate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivSelected"
        android:text="@string/create" />

</RelativeLayout>